crates/macros/tests/ui/fail/wrong_return_type.rs
#[fittings::service]
trait WrongReturnTypeService {
    async fn hello(&self, params: ()) -> ();
}

fn main() {}
